2006-08-22  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-notify-hookversion.lua: New file that
	implements notification of changes received by netsync.
	The software is self-contained but depends on some other
	packages.  It's also not entirely optimal as it will send
	notifications for all revisions, unfiltered.  Still, it
	was time to share this.  Tests are underway.

2006-08-22  Zack Weinberg  <zackw@panix.com>

	* m4/boost.m4 (BOOST_VERSION_SPECIFIC_BUGS): No need to check for
	1.32.x bugs now we require 1.33.1 or newer.
	(BOOST_SUFFIX_ARG): Clarify semantics of the variable; set the
	default here.
	(BOOST_LIB_IFELSE): Take care to distinguish 'we don't know what
	suffix to use yet' from 'the selected suffix is the empty string'.
	Once a suffix has been chosen, use it exclusively for all
	subsequent libraries.
	(BOOST_STATIC_LINK_OPTION): Properly handle BOOST_SUFFIX being a list.

2006-08-22  Jon Bright  <jon@siliconcircus.com>

	* keys.cc: Fix the unit tests.  Thou shalt (or at least, I shall) 
	remember to run make check before syncing.

2006-08-22  Jon Bright  <jon@siliconcircus.com>

	* keys.hh, keys.cc: Make passphrases be UTF-8. Change generate_key_pair
	to have two prototypes, one of which asks for a passphrase as before and
	one of which accepts a passphrase as a parameter.

2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* cmd_files.cc (annotate): Invert the meaning of --brief --- now
	the default is to display name/date, and --brief causes it to
	simply show revisions.  This functionality should probably move
	from here to 'automate annotate', but this commit doesn't go that
	far.
	* tests/annotate_with_human_output: New test.
	* tests/*annotate*: Update command line syntax, and add check()
	calls to some tests that were missing them (!).
	
2006-08-22  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Two untranslated strings to translate.

2006-08-22  Thomas Moschny  <thomas.moschny@gmx.de>
